deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: gcr.io/ultimate-flare-452110-g3/apigateway:0.0.1
          command: ["/bin/sh", "-c", "tail -f /dev/null"]
          ports:
            - containerPort: 8080
