deployment-dns-01-master-for-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telus-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telus-api-gateway
  template:
    metadata:
      labels:
        app: telus-api-gateway
    spec:
      containers:
        - name: telus-api-gateway
          image: shaikh79/apigetway:0.0.13  # Replace with your actual Docker image
          ports:
            - containerPort: 8080  # Exposed port inside the container
          resources:
            limits:
              memory: "2Gi"
              cpu: "250m"
            requests:
              memory: "256Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: telus-api-gateway
  annotations:
    cloud.google.com/health-check-port: "8080"  # Required for GCE health checks
    cloud.google.com/health-check-path: "/actuator/health"  # Health check path
spec:
  selector:
    app: telus-api-gateway
  ports:
    - protocol: TCP
      port: 80  # Standard HTTP port
      targetPort: 8080  # Container port
  type: ClusterIP  # Default service type (internal cluster access)
